alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,26 @@
 body {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center; /* horizontal center */
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif; /* optional */
 }
 
+
 .navbar {
- width: 100%;
+  width: 100vw;
+  background-color: #fff;
+  padding: 1rem 0;
+  box-sizing: border-box;
 }
+
+.navbar-inner {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 
 .navbar .signup-btn {
   text-decoration: none;
@@ -15,6 +29,14 @@ body {
 
 .navbar .signup-btn:hover {
   color: #000;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 2rem;
 }
 
 .weather-card {
@@ -97,4 +119,22 @@ body {
 .login-form button:hover {
   background-color: #ddd;
   color: black;
+}
+
+.secondary-action {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+}
+
+.secondary-button {
+  color: black;
+  margin-left: 0.3rem;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.secondary-button:hover {
+  color: #333;
 }
